[package]
name = "advent2020"
version = "0.1.0"
authors = ["John Sebastian <32150363+sebastianschroh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1.rs"

[dependencies]
